@@ -1,3 +1,9 @@
+2009-04-02  Lars Hartmann  <lars (at) chaotika (dot) org>
+
+	* src/liblpatom.c (lpatom_version_cmp): Corrected for the case
+	when only the last digit of a version differs.
+	Removed some really unnecessary comments.
+
 2009-03-31  Lars Hartmann  <lars (at) chaotika (dot) org>
 
 	* include/archives.h: extended.
